make it support other repo

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <link href="/logo.png" rel="shortcut icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <title>Lychee Stacked Pr viewer</title>
 </head>
 
 <body class="dark">
+  <a class="github-fork-ribbon" href="https://github.com/LycheeOrg/Lychee-Pull-Requests" data-ribbon="Fork me on GitHub"
+    title="Fork me on GitHub">Fork me on GitHub</a>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
